--- a/tdd-exercises-pair/Exercises.Tests/TDDExercises.Tests.csproj
+++ b/tdd-exercises-pair/Exercises.Tests/TDDExercises.Tests.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringCalculatorTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Exercises\TDDExercises.csproj">
