--- a/c#-capstone/CapstoneTests/CapstoneTests.csproj
+++ b/c#-capstone/CapstoneTests/CapstoneTests.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="InventoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Capstone\Capstone.csproj">
